--- a/Spieltrieb Soccer/Spieltrieb Soccer.csproj
+++ b/Spieltrieb Soccer/Spieltrieb Soccer.csproj
@@ -81,16 +81,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\AI\PlayerStatePattern.cs" />
     <Compile Include="Assets\Scripts\Actions\BallKick.cs" />
     <Compile Include="Assets\Scripts\Actions\PlayerMove.cs" />
     <Compile Include="Assets\Scripts\Entities\Ball.cs" />
     <Compile Include="Assets\Scripts\Entities\Field.cs" />
     <Compile Include="Assets\Scripts\Entities\PlayerCard.cs" />
     <Compile Include="Assets\Scripts\Entities\PlayerUnit.cs" />
+    <Compile Include="Assets\Scripts\States\IPlayerState.cs" />
     <Compile Include="Assets\Scripts\States\PlayerChaseBall.cs" />
     <Compile Include="Assets\Scripts\States\PlayerDecision.cs" />
     <Compile Include="Assets\Scripts\States\PlayerRunAndDribble.cs" />
-    <Compile Include="Assets\Scripts\States\PlayerStateInterface.cs" />
     <Compile Include="Assets\Scripts\States\PlayerWait.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
