Added Visual Indicators on players to help ID them. Reworked Movement controls to be more sleek and properly manage verticals. Removed some physics on AI Rigid bodies. the ball will no longer drag AI's to the bottom of the screen.

--- a/Spieltrieb Soccer/Spieltrieb Soccer.csproj
+++ b/Spieltrieb Soccer/Spieltrieb Soccer.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Assets\Scripts\States\PlayerDead.cs" />
     <Compile Include="Assets\Scripts\States\PlayerMovementDecision.cs" />
     <Compile Include="Assets\Scripts\States\PlayerMovingToPosition.cs" />
+    <Compile Include="Assets\Scripts\States\PlayerReadyInPosition.cs" />
     <Compile Include="Assets\Scripts\States\PlayerRunAndDribble.cs" />
     <Compile Include="Assets\Scripts\States\PlayerWait.cs" />
     <Compile Include="Assets\Scripts\Utility\FieldSizeGizmo.cs" />
